--- a/ansible/maintenance/update-and-restart.yaml
+++ b/ansible/maintenance/update-and-restart.yaml
@@ -14,7 +14,8 @@
         autoremove: yes
         autoclean: yes
       when: update_result.changed
+      register: upgrade_result
 
     - name: Starte den Server neu
       reboot:
-      when: update_result.changed
+      when: upgrade_result.changed
