--- a/ansible/configuration/conf-ssh-setup.yaml
+++ b/ansible/configuration/conf-ssh-setup.yaml
@@ -17,6 +17,14 @@
       notify: restart sshd
       when: ssh_key.stat.exists
       
+    - name: Remove line from sshd_config
+      lineinfile:
+        dest: /etc/ssh/sshd_config
+        regexp: '^Include /etc/ssh/sshd_config.d/\*.conf'
+        state: absent  
+      notify: restart sshd
+      when: ssh_key.stat.exists
+      
     - name: Delete CloudInit File in sshd_config.d
       ansible.builtin.file:
         path: /etc/ssh/sshd_config.d/50-cloud-init.conf
