--- a/ansible/deployment/install-docker-ubuntu.yaml
+++ b/ansible/deployment/install-docker-ubuntu.yaml
@@ -12,16 +12,19 @@
           - gnupg-agent
           - software-properties-common
         update_cache: yes
+        
     - name: add docker gpg key
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
         state: present
         keyring: /etc/apt/keyrings/docker.gpg
+        
     - name: add docker repository
       apt_repository:
         filename: docker 
         repo: deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename|lower }} stable
         state: present
+        
     - name: install docker engine
       apt:
         name:
@@ -32,3 +35,8 @@
           - docker-scan-plugin
           - docker-compose-plugin
         update_cache: yes
+        
+    - name: Add the user 'wiecktim' to the group 'docker'
+      ansible.builtin.user:
+        name: wiecktim
+        group: docker
