--- a/ansible/deployment/install-docker-raspbian.yaml
+++ b/ansible/deployment/install-docker-raspbian.yaml
@@ -1,6 +1,6 @@
 ---
 - name: install docker
-  hosts: docker&ubuntu
+  hosts: docker&raspberry
   become: yes
   tasks:
     - name: install docker dependencies
@@ -15,14 +15,14 @@
         
     - name: add docker gpg key
       apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
+        url: https://download.docker.com/linux/raspbian/gpg
         state: present
         keyring: /etc/apt/keyrings/docker.gpg
         
     - name: add docker repository
       apt_repository:
         filename: docker 
-        repo: deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename|lower }} stable
+        repo: deb [arch=arm64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/raspbian {{ ansible_lsb.codename|lower }} stable
         state: present
         
     - name: install docker engine
