--- a/ansible/deployment/install-docker-raspbian.yaml
+++ b/ansible/deployment/install-docker-raspbian.yaml
@@ -15,14 +15,14 @@
         
     - name: add docker gpg key
       apt_key:
-        url: https://download.docker.com/linux/raspbian/gpg
+        url: https://download.docker.com/linux/debian/gpg
         state: present
         keyring: /etc/apt/trusted.gpg.d/docker.gpg
         
     - name: add docker repository
       apt_repository:
         filename: docker 
-        repo: deb [arch=arm64 signed-by=/etc/apt/trusted.gpg.d/docker.gpg] https://download.docker.com/linux/raspbian {{ ansible_lsb.codename|lower }} stable
+        repo: deb [arch=arm64 signed-by=/etc/apt/trusted.gpg.d/docker.gpg] https://download.docker.com/linux/debian {{ ansible_lsb.codename|lower }} stable
         state: present
         
     - name: install docker engine
