--- a/ansible/configuration/conf-enable-ip_vs.yaml
+++ b/ansible/configuration/conf-enable-ip_vs.yaml
@@ -3,7 +3,12 @@
   hosts: docker
   become: true
   tasks:
-    - name: Add the ip_vs module
-      community.general.modprobe:
-        name: ip_vs
+   - name: Enable ip_vs Kernel module
+      lineinfile:
+        dest: /etc/modules
+        regexp: 'modprobe ip_vs'
+        line: 'modprobe ip_vs'
         state: present
+
+   - name: Starte den Server neu
+      reboot:
