SMTP_FROM added

--- a/docker-compose/vaultwarden/.env
+++ b/docker-compose/vaultwarden/.env
@@ -4,6 +4,8 @@ VAULTWARDEN_ADMIN_TOKEN=Token
 VAULTWARDEN_DOMAIN=https://domain.tld
 # [OPTIONAL] SMTP Serveradresse, wenn dein Server E-Mails versenden soll
 VAULTWARDEN_SMTP_HOST=smtp.domain.tld
+# [OPTIONAL] SMTP Adresse, von der E-Mails gesendet werden sollen
+VAULTWARDEN_SMTP_FROM=user@domain.tld
 # [OPTIONAL] SMTP User, meist die E-Mail Adresse
 VAULTWARDEN_SMTP_USERNAME=user@domain.tld
 # [OPTIONAL] SMTP Passwort, dein E-Mail Passwort (Oder Passwort für E-Mail Programme)
