--- a/docker-compose/vaultwarden/docker-compose.yml
+++ b/docker-compose/vaultwarden/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "ADMIN_TOKEN=${VAULTWARDEN_ADMIN_TOKEN}"
       - "DOMAIN=${VAULTWARDEN_DOMAIN}"
       - "SMTP_HOST=${VAULTWARDEN_SMTP_HOST}"
+      - "SMTP_FROM=${VAULTWARDEN_SMTP_FROM}"
       - "SMTP_SECURITY=force_tls"
       - "SMTP_PORT=465"
       - "SMTP_USERNAME=${VAULTWARDEN_SMTP_USERNAME}"
