--- a/docker-compose/paperless-ngx/docker-compose-cld.yml
+++ b/docker-compose/paperless-ngx/docker-compose-cld.yml
@@ -14,7 +14,7 @@ services:
       - internal
     restart: unless-stopped
     volumes:
-      - Paperless/db:/var/lib/postgresql/data
+      - Paperless:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -38,10 +38,10 @@ services:
       timeout: 10s
       retries: 5
     volumes:
-      - Paperless/data:/usr/src/paperless/data
-      - Paperless/media:/usr/src/paperless/media
-      - Paperless/export:/usr/src/paperless/export
-      - Paperless/consume:/usr/src/paperless/consume
+      - Paperless:/usr/src/paperless/data
+      - Paperless:/usr/src/paperless/media
+      - Paperless:/usr/src/paperless/export
+      - Paperless:/usr/src/paperless/consume
     environment:
       PAPERLESS_REDIS: redis://broker:6379
       PAPERLESS_DBHOST: db
