--- a/docker-compose/paperless-ngx/docker-compose-cld.yml
+++ b/docker-compose/paperless-ngx/docker-compose-cld.yml
@@ -14,7 +14,7 @@ services:
       - internal
     restart: unless-stopped
     volumes:
-      - Paperless:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -53,6 +53,7 @@ services:
 
 volumes:
   Paperless:
+  pgdata:
 
 networks:
   paperless_net:
