--- a/docker-compose/paperless-ngx/docker-compose-cld.yml
+++ b/docker-compose/paperless-ngx/docker-compose-cld.yml
@@ -2,14 +2,16 @@ version: "3.4"
 services:
   broker:
     container_name: paperless-redis
-    image: redis:6.0
+    image: redis:7
     networks:
       - internal
     restart: unless-stopped
+    volumes:
+      - redisdata:/data
 
   db:
     container_name: paperless-db
-    image: postgres:13
+    image: postgres:15
     networks:
       - internal
     restart: unless-stopped
@@ -54,6 +56,7 @@ services:
 volumes:
   Paperless:
   pgdata:
+  redisdata:
 
 networks:
   paperless_net:
