--- a/docker-compose/paperless-ngx/docker-compose-cld.yml
+++ b/docker-compose/paperless-ngx/docker-compose-cld.yml
@@ -2,14 +2,16 @@ version: "3.4"
 services:
   broker:
     container_name: paperless-redis
-    image: redis:6
+    image: redis:7
     networks:
       - internal
     restart: unless-stopped
+    volumes:
+      - redisdata:/data
 
   db:
     container_name: paperless-db
-    image: postgres:13
+    image: postgres:15
     networks:
       - internal
     restart: unless-stopped
@@ -43,8 +45,6 @@ services:
       - export:/usr/src/paperless/export
       - consume:/usr/src/paperless/consume
     environment:
-      USERMAP_UID: 1000
-      USERMAP_GID: 1000
       PAPERLESS_REDIS: redis://broker:6379
       PAPERLESS_DBHOST: db
       PAPERLESS_DBNAME: ${POSTGRES_DB}
