Bookstack Cloud & .env update for Port

--- a/docker-compose/bookstack/.env
+++ b/docker-compose/bookstack/.env
@@ -4,3 +4,5 @@ BOOKSTACK_APP_URL=http://bookstack.example.local:6875
 BOOKSTACK_MYSQL_PASSWORD=MySQLPasswort
 # MySQL Passwort für den User "root"
 BOOKSTACK_MYSQL_ROOT_PASSWORD=MySQLRootPasswort
+# Port der Anwendung
+PORT=6875
