Healthchecks E-Mail Domain update

--- a/docker-compose/healthchecks.io/.env
+++ b/docker-compose/healthchecks.io/.env
@@ -20,3 +20,5 @@ DB_PASSWORD=MYPASSWORD
 TELEGRAM_BOT_NAME=TBOTNAME_bot
 # Telegram Token
 TELEGRAM_TOKEN=12312312312:ASDJQWIUHFHASFHhsafuhaswuhFDSUAH
+# E-Mail Domain, auf der pings empfangen werden sollen
+PING_EMAIL_DOMAIN=hc.example.com
