--- a/docker-compose/dashy/docker-compose-cld.yml
+++ b/docker-compose/dashy/docker-compose-cld.yml
@@ -4,7 +4,7 @@ services:
     image: lissy93/dashy
     container_name: Dashy
     volumes:
-       - Dashy:/app/public/conf.yml
+       - Dashy:/app/public
     ports:
       - 4000:80
     environment:
