--- a/docker-compose/paperless-ngx/docker-compose-cld.yml
+++ b/docker-compose/paperless-ngx/docker-compose-cld.yml
@@ -53,7 +53,7 @@ services:
       PAPERLESS_SECRET_KEY: ${PAPERLESS_SECRET_KEY}
       PAPERLESS_TIME_ZONE: Europe/Berlin
       PAPERLESS_OCR_LANGUAGE: deu
-      PAPERLESS_FILENAME_FORMAT: "{created_year}/{correspondent}/{title}"
+      PAPERLESS_FILENAME_FORMAT: "{{ created_year }}/{{ correspondent }}/{{ title }}"
 
 volumes:
   data:
