--- a/docker-compose/stirling-tools/docker-compose-cld.yml
+++ b/docker-compose/stirling-tools/docker-compose-cld.yml
@@ -4,6 +4,7 @@ services:
     image: frooodle/s-pdf:latest
     ports:
       - '8080:8080'
+    restart: unless-stopped
     volumes:
       - Stirling-PDF:/usr/share/tesseract-ocr/5/tessdata
       - Stirling-PDF:/configs
